--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="navbar">
         <a href="#" class="logo">
             <!-- Placeholder for Logo -->
-            <img src="logo-placeholder.png" alt="Nigel's Tea">
+            <img src="logo.png" alt="Nigel's Tea">
             Nigel's Tea
         </a>
         <a href="#">Home</a>
