--- a/index.html
+++ b/index.html
@@ -200,13 +200,15 @@
         <p>
             Dive into a world of delightful tea-themed games and adventures. From interactive journeys to exciting challenges, we have something brewing for every tea enthusiast.
         </p>
-        <a href="#" class="cta-button">Explore Our Games</a>
+        <a href="#" class="cta-button">Check our our latest 3D game!</a>
     </div>
 
     <!-- Content Section -->
     <div class="content">
         <div class="lorem">
-            <!-- Your content here -->
+            <p>Welcome to the lovely website that is Nigel's Tea.</p>
+            <p>Our website hosts games inspired by tea, along with other random stuff that is internet-worthy.</p>
+            <p>We hope you enjoy browsing the weird and wonderful world that is Nigel's.</p>
         </div>
     </div>
 
