--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </a>
         <div class="menu">
             <a href="#">Home</a>
-            <a href="#">Games</a>
+            <a href="games.html" class="active">Games</a>
             <a href="#">Projects</a>
             <a href="#">About Us</a>
         </div>
