--- a/games.html
+++ b/games.html
@@ -188,12 +188,8 @@
     <div class="games-section">
         <h1>Our Exciting Tea-Themed Games</h1>
         <div class="game-buttons">
-            <a href="tea-adventure.html">Tea Adventure</a>
-            <a href="brew-master.html">Brew Master Challenge</a>
-            <a href="flavor-quest.html">Flavor Quest</a>
-            <a href="teapot-puzzle.html">Teapot Puzzle</a>
-            <a href="herbal-hunt.html">Herbal Hunt</a>
-            <!-- Add more game links as needed -->
+            <a href="/games/2dtea.html">Tea Maze Adventure</a>
+            <a href="/games/teaquest3d.html">TeaQuest 3D</a>
         </div>
     </div>
 
